--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 absl-py==1.1.0
 appdirs==1.4.4
 asgiref==3.5.2
@@ -60,9 +61,9 @@ tensorflow-cpu==2.9.1
 tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
-torch==1.11.0
+torch==1.8.1+cpu
 torchaudio==0.11.0
-torchvision==0.12.0
+torchvision==0.9.1+cpu
 tqdm==4.64.0
 typing_extensions==4.2.0
 tzdata==2022.1
