--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
--f https://download.pytorch.org/whl/cpu
 absl-py==1.1.0
 appdirs==1.4.4
 asgiref==3.5.2
@@ -61,9 +60,9 @@ tensorflow-cpu==2.9.1
 tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
-torch==1.11.0+cpu 
+torch==1.0.1 
 torchaudio==0.11.0
-torchvision==0.12.0+cpu
+torchvision==0.2.2
 tqdm==4.64.0
 typing_extensions==4.2.0
 tzdata==2022.1
