--- a/requirements.txt
+++ b/requirements.txt
@@ -60,9 +60,7 @@ tensorflow-cpu==2.9.1
 tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
-pytorch==1.11.0 cpuonly
-torchaudio==0.11.0
-torchvision==0.12.0 cpuonly
+torch==1.11.0+cpu torchvision==0.12.0+cpu torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cputorchaudio==0.11.0
 tqdm==4.64.0
 typing_extensions==4.2.0
 tzdata==2022.1
