--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ tensorflow-cpu==2.9.1
 tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
-torch-cpu==1.11.0
+torch+cpu==1.11.0
 torchaudio==0.11.0
 torchvision==0.12.0
 tqdm==4.64.0
